--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@
 
 MATCHING_SERVICE_ENDPOINT=https://trialsapi.compositeapps.net/v1/trials/search
 MATCHING_SERVICE_AUTH_TOKEN=""
+MATCHING_SERVICE_PORT=3003
