--- a/package.json
+++ b/package.json
@@ -22,25 +22,26 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "clinical-trial-matching-service": "^0.0.3",
+    "clinical-trial-matching-service": "^0.0.7",
     "dotenv-flow": "^3.2.0"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/dotenv-flow": "^3.0.0",
     "@types/express": "^4.17.6",
-    "@types/jasmine": "^3.5.10",
-    "@types/node": "^14.0.13",
+    "@types/fhir": "^0.0.35",
+    "@types/jasmine": "^4.3.1",
+    "@types/node": "^18.11.17",
     "@types/supertest": "^2.0.9",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
-    "eslint": "^7.17.0",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
+    "eslint": "^8.30.0",
     "fhir": "^4.7.9",
-    "jasmine": "^3.5.0",
+    "jasmine": "^4.5.0",
     "nock": "^13.0.5",
     "nyc": "^15.1.0",
     "supertest": "^6.0.1",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.1.3"
   }
 }
