Update dependencies, add cache config from env

--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@
 MATCHING_SERVICE_ENDPOINT=https://trialsapi.compositeapps.net/v1/trials/search
 MATCHING_SERVICE_AUTH_TOKEN=""
 MATCHING_SERVICE_PORT=3003
+
+# The cache file to use for clinical trial data cached from clinicaltrials.gov
+CTGOV_CACHE_FILE=ctgov-cache.db
